# nasa-wip

./: .gitignore  DEPLOYMENT.md  README.md  app.py  charts.py  data_pipeline.py  pyproject.toml  requirements.txt  run_daily.py  visualizations.py
data/processed/: events.csv  events_2025.csv  events_2025_category_counts.csv  occurrences.csv
data/raw/: events_2025-01-01_to_2025-11-01.json  events_2025-11-11_to_2025-11-12.json  events_2025-11-13_to_2025-11-14.json
graphs/: daily_event_count.html  geospatial_event_map.html  nasa_events_radial_chart.html  total_nasa_events_big_number.html
notebooks/: exploratory_analysis_pandas.ipynb  exploratory_analysis_sql.ipynb  sandbox.ipynb  visualizations.ipynb
notes/: about_data.md  sample_stock_app.py  todo.md
notes/prompts/: 1_prompt_context an dproblem.md  3_data_app.md  4_refine data modelation.md  5_reformat_layour.md
prompts/: prompt_2_dashboard.md  todo.md
src/: __init__.py
